# plant-wilting-simulation

./: .gitignore  .gitmodules  README.md  imgui.ini  output.wilt  outwater.txt  system.mat  water.mat
CMake/: DataCopyTargets.cmake
Demos/: CMakeLists.txt
Demos/Common/: DemoBase.cpp  DemoBase.h
Demos/PlantDemo/: CMakeLists.txt  PlantDemo.cpp
Utils/: Version.h
data/plants/: left-plant-improved.txt  left-plant.txt  output_plant.txt  plant000.txt  plant001.txt  plant002.txt  plant003.txt  plant004.txt  plant005.txt  plant006.txt  teaser-plant-with-veins.txt  teaser-plant.txt
